Create news view

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "News";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<h1> News </h1>
+
+<p> Use this area to provide additional information.</p>
