Made layout responsive

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,10 +30,10 @@
             </div>
         </div>
         <div class="col-md-8 news-container">
-            <h2>Headlines / Cards</h2>
-            <div class="col-sm-8 news-card">
+            <h2 class="pt-2">Headlines / Cards</h2>
+            <div class="col-sm-8 d-md-flex flex-column">
                 <div class="card mb-3">
-                    <div class="row no-gutters">
+                    <div class="row no-gutters flex-wrap-reverse">
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">News Article Title</h5>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="card mb-3">
-                    <div class="row no-gutters">
+                    <div class="row no-gutters flex-wrap-reverse">
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">News Article Title 2</h5>
