--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,14 +7,18 @@
                         News Application
                     </h1>
                 </div>
-                <button class="btn btn-outline-dark btn-lg mr-1" type="button" 
+                <button class="btn btn-outline-dark btn-lg mr-1" type="button"
                         data-type="Login"
-                        data-toggle="modal" 
-                        data-target="#login-modal">LOGIN</button>
-                <button class="btn btn-outline-dark btn-lg" type="button" 
+                        data-toggle="modal"
+                        data-target="#login-modal">
+                    LOGIN
+                </button>
+                <button class="btn btn-outline-dark btn-lg" type="button"
                         data-type="Signup"
-                        data-toggle="modal" 
-                        data-target="#login-modal">SIGN UP</button>
+                        data-toggle="modal"
+                        data-target="#login-modal">
+                    SIGN UP
+                </button>
             </div>
         </div>
     </div>
@@ -119,6 +123,10 @@
                         <label for="login-password" class="col-form-label">Password</label>
                         <input type="password" class="form-control" id="login-password">
                     </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="button" class="btn btn-secondary btn-lg" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary ml-2 btn-lg">Login</button>
+                    </div>
                 </form>
                 <form id="signup-form" style="display: none">
                     <div class="form-group">
@@ -137,11 +145,11 @@
                         <label for="password-check" class="col-form-label">Repeat password</label>
                         <input type="password" class="form-control" id="password-check">
                     </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="button" class="btn btn-secondary btn-lg" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary ml-2 btn-lg">Sign up</button>
+                    </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="modal-button" type="submit" class="btn btn-primary">Login</button>
             </div>
         </div>
     </div>
