--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,10 @@
             crossorigin="anonymous">
     </script>
 
+    <script src="~/js/checklist.js"></script>
+    <script src="~/js/formhandler.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
 
 </body>
 </html>
