--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="panel panel-default">
+﻿@model News.Models.LoginForm
+
+<div class="panel panel-default">
     <div class="row">
         <div class="col-lg-12">
             <div class="card flex-row">
@@ -114,36 +116,36 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="login-form">
+                <form asp-action="Index" asp-controller="Form" method="POST" id="login-form">
                     <div class="form-group">
-                        <label for="user-email" class="col-form-label">Username / email</label>
-                        <input type="text" class="form-control" id="user-email">
+                        <label asp-for="userEmail" class="col-form-label"></label>
+                        <input asp-for="userEmail" type="text" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="login-password" class="col-form-label">Password</label>
-                        <input type="password" class="form-control" id="login-password">
+                        <label asp-for="password" class="col-form-label"></label>
+                        <input asp-for="password" type="password" class="form-control">
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="button" class="btn btn-secondary btn-lg" data-dismiss="modal">Close</button>
                         <button type="submit" class="btn btn-primary ml-2 btn-lg">Login</button>
                     </div>
                 </form>
-                <form id="signup-form" style="display: none">
+                <form method="POST" id="signup-form" style="display: none">
                     <div class="form-group">
                         <label for="email" class="col-form-label">Email</label>
-                        <input type="text" class="form-control" id="email">
+                        <input type="text" name="email" class="form-control" id="email">
                     </div>
                     <div class="form-group">
                         <label for="username" class="col-form-label">Username</label>
-                        <input type="text" class="form-control" id="username">
+                        <input type="text" name="username" class="form-control" id="username">
                     </div>
                     <div class="form-group">
                         <label for="signup-password" class="col-form-label">Password</label>
-                        <input type="password" class="form-control" id="signup-password">
+                        <input type="password" name="password" class="form-control" id="signup-password">
                     </div>
                     <div class="form-group">
                         <label for="password-check" class="col-form-label">Repeat password</label>
-                        <input type="password" class="form-control" id="password-check">
+                        <input type="password" name="passwordCheck" class="form-control" id="password-check">
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="button" class="btn btn-secondary btn-lg" data-dismiss="modal">Close</button>
