Refactored ArticleContext to use EntityFramework 6 (EF6) Code cleanup

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
         </div>
         <div class="col-md-9 d-flex flex-column">
             <h2 class="pt-2">Headlines / Cards</h2>
-            <div class="col-sm-10 d-md-flex flex-column">
+            <div id="cardView" class="col-sm-10 d-md-flex flex-column">
                 <div class="card mb-3">
                     <div class="row no-gutters flex-wrap-reverse">
                         <div class="col-md-8">
