--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -60,13 +60,16 @@
         <div class="col-md-9 d-flex flex-column">
             <h2 class="pt-2">Headlines / Cards</h2>
             <div class="col-sm-10 d-md-flex flex-column">
+                
+                @foreach (var article in ViewData["articles"] as List<Article>)
+                {
                 <div class="card mb-3">
                     <div class="row no-gutters flex-wrap-reverse">
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">News Article Title</h5>
+                                <h5 class="card-title">@article.Title</h5>
                                 <p class="card-subtitle mb-2 text-muted">Publisher</p>
-                                <p class="card-text"> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum  Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+                                <p class="card-text">@article.Description</p>
                                 <div class="badge badge-primary">#Technology</div>
                                 <div class="badge badge-primary">#World</div>
                                 <div class="badge badge-primary">#Trending</div>
@@ -77,28 +80,11 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Published : 24/7/2019</small>
+                        <small class="text-muted">@article.Date</small>
                     </div>
                 </div>
-                <div class="card mb-3">
-                    <div class="row no-gutters flex-wrap-reverse">
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">News Article Title 2</h5>
-                                <p class="card-subtitle mb-2 text-muted">Publisher</p>
-                                <p class="card-text"> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum  Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-                                <div class="badge badge-primary">#Sports</div>
-                                <div class="badge badge-primary">#World</div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 d-flex align-items-center">
-                            <img src="~/images/google_news.png" class="card-img pr-1" />
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Published : 24/7/2019</small>
-                    </div>
-                </div>
+                }
+
             </div>
         </div>
     </div>
