Loaded articles into UI

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
                         News Application
                     </h1>
                 </div>
+
                 <button class="btn btn-outline-dark btn-lg mr-1" type="button"
                         data-type="Login"
                         data-toggle="modal"
@@ -57,9 +58,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-9 d-flex flex-column">
-            <h2 class="pt-2">Headlines / Cards</h2>
-            <div id="cardView" class="col-sm-10 d-md-flex flex-column">
+        <div class="col-md-9 d-flex flex-column overflow-auto align-items-center">
+            <div id="cardView" class="col-sm-12 d-md-flex flex-column" style="max-height: 40em;">
             </div>
         </div>
     </div>
