Added filter through FilterController ==== TODO ==== Needs removal of filters Consider different approach to getting articles (now it queries the DB everytime)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,32 +49,7 @@
         </div>
         <div class="col-md-9 d-flex flex-column overflow-auto align-items-center">
             <div id="cardView" class="col-sm-12 d-md-flex flex-column" style="max-height: 40em;">
-                
-                @foreach (var article in ViewData["articles"] as List<Article>)
-                {
-                <div class="card mb-3">
-                    <div class="row no-gutters flex-wrap-reverse">
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">@article.Title</h5>
-                                <p class="card-subtitle mb-2 text-muted">@article.WebsiteName</p>
-                                <p class="card-text">@article.Description</p>
-                                @foreach (var genre in article.Genres as List<String>)
-                                {
-                                <div class='badge badge-primary'>#@genre </div>
-                                }
-                            </div>
-                        </div>
-                        <div class="col-md-4 d-flex align-items-center">
-                            <img src="~/images/wireframe.png" class="card-img pr-1" />
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Published : @article.Date</small>
-                    </div>
-                </div>
-                }
-
+                @Html.Partial("_Articles");
             </div>
         </div>
     </div>
