--- a/Views/Shared/_Articles.cshtml
+++ b/Views/Shared/_Articles.cshtml
@@ -4,7 +4,7 @@
         <div class="row no-gutters flex-wrap-reverse">
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">@article.Title</h5>
+                    <a href="@article.WebsiteUrl" target="_blank"><h5 class="card-title">@article.Title</h5></a>
                     <p class="card-subtitle mb-2 text-muted">@article.WebsiteName</p>
                     <p class="card-text">@article.Description</p>
                     @foreach (var genre in article.Genres as List<String>)
