--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,6 +24,22 @@
             </div>
         </div>
     </div>
+</div>
+    <div class="row">
+        <div class="col-lg-10" overflow-auto>
+            <div class="card flex-row">
+                <h2 class="panel-title">
+                    Pick a Site:
+                </h2>
+                <div class="col-md-4 d-flex align-items-center">
+                    <img src="~/images/cnn.png" class="card-img pr-1" id="CNN"/>
+                </div>
+                <div class="col-md-4 d-flex align-items-center">
+                    <img src="~/images/BBC.png" class="card-img pr-1" id="BBC"/>
+                </div>
+            </div>
+        </div>
+
     <br />
     <div class="row">
         <div class="col-md-3">
