--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link href="~/css/bootstrap.css" rel="stylesheet">
     <link href="~/css/flat-ui.css" rel="stylesheet">
     <link href="~/css/site.css" rel="stylesheet">
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <!-- Visual Studio Browser Link -->
     @*<script type="application/json" id="__browserLink_initializationData">
             {"requestId":"a717d5a07c1741949a7cefd6fa2bad08","requestMappingFromServer":false}
