--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,10 +19,10 @@
 </nav>
 <div class="row">
     <div id="websites" class="col-lg-12 d-flex flex-wrap justify-content-around" overflow-auto>
-        <div class="website-container" value="1">
+        <div class="website-container" onclick="websiteClick(this)" value="1">
             <img src="~/images/cnn.png"/>
         </div>
-        <div class="website-container selected" value="3">
+        <div class="website-container selected" onclick="websiteClick(this)" value="3">
             <img src="~/images/BBC.png"/>
         </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="col-md-4">
         <div class="todo">
             <div class="todo-search">
-                <input class="todo-search-field" type="search" value="" placeholder="Search Favourites">
+                <input class="todo-search-field" type="search" onchange="searchFavourites(this)" placeholder="Search Favourites">
             </div>
             <ul>
                 <li class="todo-done">
@@ -65,7 +65,7 @@
     </div>
     <div class="col-md-8 d-flex flex-column align-items-center">
         <div class="todo-search w-100">
-            <input class="todo-search-field" type="search" value="" placeholder="Search Articles">
+            <input class="todo-search-field" type="search" oninput="searchArticles(this)" placeholder="Search Articles">
         </div>
         <div id="cardContainer" class="d-md-flex flex-column overflow-auto" style="max-height: 40em;">
             @Html.Partial("_Articles")
