--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
     </div>
     <div class="col-md-8 d-flex flex-column align-items-center">
         <div class="todo-search w-100">
-            <input class="todo-search-field" type="search" oninput="searchArticles(this)" placeholder="Search Articles">
+            <input id="article-search-field" class="todo-search-field" type="search" oninput="searchArticles(this)" placeholder="Search Articles">
         </div>
         <div id="cardContainer" class="d-md-flex flex-column overflow-auto" style="max-height: 40em;">
             @Html.Partial("_Articles")
