Added some animations Added scrollbar for genres instead of flex wrap

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
 </nav>
 <div class="row">
-    <div id="websites" class="col-lg-12 d-flex flex-wrap justify-content-around" overflow-auto>
+    <div id="websites" class="col-lg-12 d-flex justify-content-around" overflow-auto>
         <div class="website-container" onclick="websiteClick(this)" value="1">
             <img src="~/images/cnn.png"/>
         </div>
@@ -29,7 +29,7 @@
 </div>
 <div class="row justify-content-center">
     <div class="divider-md"></div>
-    <div id="genres" class="col-lg-12 d-flex flex-wrap justify-content-around tag-btn-group" data-toggle="buttons" overflow-auto>
+    <div id="genres" class="genre-container col-lg-12" data-toggle="buttons" overflow-auto>
         @Html.Partial("_Genres")
     </div>
     <div class="divider-lg"></div>
@@ -67,7 +67,7 @@
         <div class="todo-search w-100">
             <input id="article-search-field" class="todo-search-field" type="search" oninput="searchArticles(this)" placeholder="Search Articles">
         </div>
-        <div id="cardContainer" class="d-md-flex flex-column overflow-auto" style="max-height: 40em;">
+        <div id="cardContainer" class="article-container">
             @Html.Partial("_Articles")
         </div>
     </div>
