--- a/Views/Shared/_Articles.cshtml
+++ b/Views/Shared/_Articles.cshtml
@@ -4,7 +4,9 @@
         <div class="row no-gutters flex-wrap-reverse">
             <div class="card-body">
                 <div class="fav-icon fui-heart"></div>
-                <a href="@article.WebsiteUrl" target="_blank"><h5 class="card-title">@article.Title</h5></a>
+                <a href="@article.WebsiteUrl" target="_blank">
+                    <h5 class="card-title" style="width: 90%;">@article.Title</h5>
+                </a>
                 <p class="card-subtitle mb-2 text-muted">@article.WebsiteName</p>
                 <p class="card-text">@article.Description</p>
                 @foreach (var genre in article.Genres)
