--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -39,16 +39,25 @@ body {
     max-width: 10rem;
     padding: .75rem;
     opacity: 0.7;
-    transition: opacity .15s;
+    transition: .15s;
 }
 
 .website-container:hover {
     opacity: 1;
     cursor: pointer;
+    transform: scale(1.05);
 }
 
 /* GENRES */
 .genre-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.genre-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,17 +66,48 @@ body {
     border-radius: 0.75rem;
     padding: .5rem;
     opacity: 0.6;
-    transition: opacity .15s;
-    margin: 0.2rem;
+    transition: .15s;
+    margin: 0.5rem 0.25rem 0.75rem;
+    white-space: nowrap;
 }
 
-.genre-container:hover {
+.genre-box:hover {
     color: white;
     opacity: 1;
     cursor: pointer;
+    transform: scale(1.1);
+}
+
+/* Genre scrollbar */
+
+.genre-container::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: var(--color-wet-asphalt);
+}
+
+.genre-container::-webkit-scrollbar
+{
+    width: 15px;
+    background-color: var(--color-midnight-blue);
+}
+
+.genre-container::-webkit-scrollbar-thumb
+{
+    border-radius: 7px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: var(--color-peter-river);
 }
 
 /* Articles */
+.article-container {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    max-height: 40rem;
+    min-width: 100%;
+}
 
 .card-text {
     color: var(--secondary)
