--- a/Views/Shared/_Articles.cshtml
+++ b/Views/Shared/_Articles.cshtml
@@ -1,9 +1,10 @@
 ﻿@foreach (var article in ViewData["articles"] as List<Article>)
 {
-    <div class="card mb-3">
+    <div id="@article.ID" class="card mb-3">
         <div class="row no-gutters flex-wrap-reverse">
             <div class="card-body">
-                <div class="fav-icon fui-heart"></div>
+                <div class="fav-icon fui-heart" onclick=addFavourite(@article.ID)>
+                </div>
                 <a href="@article.WebsiteUrl" target="_blank">
                     <h5 class="card-title" style="width: 90%;">@article.Title</h5>
                 </a>
@@ -11,7 +12,7 @@
                 <p class="card-text">@article.Description</p>
                 @foreach (var genre in article.Genres)
                 {
-                    <div class='badge badge-primary'>#@genre </div>
+                    <div class='badge badge-primary'>#@genre</div>
                 }
             </div>
         </div>
