--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
     <script src="~/js/bootstrap.bundle.js" asp-append-version="true"></script>
     <script src="~/js/application.js" asp-append-version="true"></script>
     <script src="~/js/flat-ui.js" asp-append-version="true"></script>
-    <script src="~/js/storage.js" asp-append-version="true"></script>
+    <script src="~/js/favourite.js" asp-append-version="true"></script>
     <script src="~/js/filter.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
