Added toggle feature for favourites

--- a/Views/Shared/_Favourites.cshtml
+++ b/Views/Shared/_Favourites.cshtml
@@ -4,9 +4,9 @@
         <a class="todo-icon fui-heart" onclick="removeFavourite(@article.ID)"></a>
         <a class="todo-content" href="@article.WebsiteUrl">
             <h4 class="todo-name text-ellipsis">
-                Cranborne Chase first entire AONB to be dark sky reserve
+                @article.Title
             </h4>
-            BBC
+            @article.WebsiteName
         </a>
     </li>
 }
