--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -40,6 +40,7 @@
         <div id="favourites" class="todo">
             <div class="todo-search">
                 <input class="todo-search-field" type="search" onchange="searchFavourites(this)" placeholder="Search Favourites">
+                <div class="fui-list" data-toggle="tooltip" onclick="toggleFavourites(this)" data-original-title="Click to expand or shrink favourites"></div>
             </div>
             <ul>
             </ul>
